--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Primary Meta Tags -->
     <title>APPGI - Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia | Organisasi Profesional Industri Migas</title>
     <meta name="title" content="APPGI - Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia | Organisasi Profesional Industri Migas" />
-    <meta name="description" content="Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia (APPGI) didirikan pada tanggal 10 Oktober 2014 sebagai respons terhadap kebutuhan industri minyak dan gas bumi Indonesia akan sebuah wadah organisasi yang dapat menyatukan para profesional. APPGI berkomitmen untuk meningkatkan profesionalitas anggotanya melalui berbagai program pengembangan kapasitas, standardisasi teknis, dan pertukaran knowledge terkini dalam industri pemboran." />
-    <meta name="keywords" content="APPGI, Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia, organisasi minyak dan gas, industri migas Indonesia, profesional pemboran, asosiasi profesional migas, oil and gas association Indonesia, drilling professionals, industri perminyakan" />
+    <meta name="description" content="Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia (APPGI) didirikan pada tanggal 10 Oktober 2014 sebagai respons terhadap kebutuhan industri minyak dan gas bumi Indonesia akan sebuah wadah organisasi yang dapat menyatukan para profesional. APPGI berkomitmen untuk meningkatkan profesionalitas anggotanya melalui berbagai program pengembangan kapasitas, standardisasi teknis, dan pertukaran knowledge terkini dalam industri minyak dan gas bumi." />
+    <meta name="keywords" content="APPGI, Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia, organisasi minyak dan gas, industri migas Indonesia, profesional minyak dan gas bumi, asosiasi profesional migas, oil and gas association Indonesia, drilling professionals, industri perminyakan" />
     <meta name="author" content="APPGI - Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Indonesian" />
@@ -45,7 +45,7 @@
       "alternateName": "APPGI",
       "url": "https://appgi.org",
       "logo": "https://appgi.org/logo.png",
-      "description": "Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia (APPGI) didirikan pada tanggal 10 Oktober 2014 sebagai respons terhadap kebutuhan industri minyak dan gas bumi Indonesia akan sebuah wadah organisasi yang dapat menyatukan para profesional. APPGI berkomitmen untuk meningkatkan profesionalitas anggotanya melalui berbagai program pengembangan kapasitas, standardisasi teknis, dan pertukaran knowledge terkini dalam industri pemboran.",
+      "description": "Asosiasi Profesi Perminyakan dan Gas Bumi Indonesia (APPGI) didirikan pada tanggal 10 Oktober 2014 sebagai respons terhadap kebutuhan industri minyak dan gas bumi Indonesia akan sebuah wadah organisasi yang dapat menyatukan para profesional. APPGI berkomitmen untuk meningkatkan profesionalitas anggotanya melalui berbagai program pengembangan kapasitas, standardisasi teknis, dan pertukaran knowledge terkini dalam industri minyak dan gas bumi.",
       "foundingDate": "2014-10-10",
       "address": {
         "@type": "PostalAddress",
